# auto_duo

./: Cargo.toml  README.md  words.txt
src/: config.rs  main.rs  tests.rs
