[package]
name = "auto_duo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12"
thirtyfour = "0.32.0"
tokio = "1.37.0"
h2 = "0.4.4"
serde_json = "1.0"
serde = { version = "1.0.198", features = ["derive"] }
serial_test = "3.0.0"
